--- a/package.json
+++ b/package.json
@@ -8,22 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@aws-amplify/ui-vue": "^0.2.10",
-    "aws-amplify": "^3.0.20",
-    "aws-amplify-vue": "^2.1.1",
-    "bootstrap-vue": "^2.15.0",
-    "core-js": "^3.6.5",
-    "vue": "^2.6.11",
-    "vue-router": "^3.3.4"
+    "@aws-amplify/ui-vue": "^1.0.14",
+    "aws-amplify": "^4.1.3",
+    "bootstrap-vue": "^2.21.2",
+    "vue": "^2.6.14",
+    "vue-router": "^3.5.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.4.6",
-    "@vue/cli-plugin-eslint": "~4.4.6",
-    "@vue/cli-service": "~4.4.6",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.5.0",
-    "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "@vue/cli-service": "^4.5.13",
+    "eslint": "^7.30.0",
+    "eslint-plugin-vue": "^7.13.0",
+    "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
     "root": true,
