--- a/.gitignore
+++ b/.gitignore
@@ -21,12 +21,14 @@ pnpm-debug.log*
 *.sln
 *.sw?
 
-#amplify
+#amplify-do-not-edit-begin
 amplify/\#current-cloud-backend
 amplify/.config/local-*
+amplify/logs
 amplify/mock-data
+amplify/mock-api-resources
 amplify/backend/amplify-meta.json
-amplify/backend/awscloudformation
+amplify/backend/.temp
 amplify/team-provider-info.json
 build/
 dist/
@@ -34,6 +36,10 @@ node_modules/
 aws-exports.js
 awsconfiguration.json
 amplifyconfiguration.json
+amplifyconfiguration.dart
 amplify-build-config.json
 amplify-gradle-config.json
 amplifytools.xcconfig
+.secret-*
+**.sample
+#amplify-do-not-edit-end
