--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -55,7 +55,7 @@
     }
   },
   "custom": {
-    "signedcookie": {
+    "secretmanager": {
       "dependsOn": [],
       "providerPlugin": "awscloudformation",
       "service": "customCloudformation"
@@ -64,6 +64,15 @@
   "function": {
     "getcookie": {
       "build": true,
+      "dependsOn": [
+        {
+          "attributes": [
+            "Arn"
+          ],
+          "category": "function",
+          "resourceName": "singedcookiecryptography"
+        }
+      ],
       "providerPlugin": "awscloudformation",
       "service": "Lambda"
     },
@@ -71,6 +80,11 @@
       "build": true,
       "providerPlugin": "awscloudformation",
       "service": "Lambda"
+    },
+    "singedcookiecryptography": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "LambdaLayer"
     }
   },
   "parameters": {
@@ -87,14 +101,6 @@
         {
           "category": "function",
           "resourceName": "getcookie"
-        }
-      ]
-    },
-    "AMPLIFY_function_singedcookieba6e1384PreSignup_DOMAINALLOWLIST": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "singedcookieba6e1384PreSignup"
         }
       ]
     },
